force-app/main/default/objects/TCC_O2Q__Opty2Quote__c/TCC_O2Q__Opty2Quote__c.object-meta.xml
<CustomObject>
    <label>Opty2Quote</label>
    <nameField>
        <displayFormat>O2QMap{000000}</displayFormat>
        <label>Mapping #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opty2Quote</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>