force-app/main/default/objects/TCC_O2Q__Opty2Quote__c/fields/TCC_O2Q__Source_Field_API__c.field-meta.xml
<CustomField>
    <fullName>TCC_O2Q__Source_Field_API__c</fullName>
    <label>Source Field API</label>
    <length>255</length>
    <type>Text</type>
</CustomField>