force-app/main/default/objects/TCC_O2Q__Opty2Quote__c/fields/TCC_O2Q__Sync__c.field-meta.xml
<CustomField>
    <fullName>TCC_O2Q__Sync__c</fullName>
    <label>Sync</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Sync</fullName>
                <default>true</default>
                <label>Sync</label>
            </value>
            <value>
                <fullName>Don&#39;t Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>