force-app/main/default/objects/TCC_O2Q__Opty2Quote__c/recordTypes/TCC_O2Q__Opty_to_Quote.recordType-meta.xml
<RecordType>
    <fullName>TCC_O2Q__Opty_to_Quote</fullName>
    <active>true</active>
    <description>Record type to copy custom fields from Opportunity to Quote</description>
    <label>Opty to Quote</label>
</RecordType>