force-app/main/default/objects/TCC_O2Q__Opty2Quote__c/recordTypes/TCC_O2Q__OptyLine_to_QuoteLine.recordType-meta.xml
<RecordType>
    <fullName>TCC_O2Q__OptyLine_to_QuoteLine</fullName>
    <active>true</active>
    <description>Record type to copy custom fields from Opportunity Line items to Quote Line items</description>
    <label>OptyLine to QuoteLine</label>
</RecordType>