force-app/main/default/objects/TCC_O2Q__Opty2Quote__c/listViews/TCC_O2Q__All.listView-meta.xml
<ListView>
    <fullName>TCC_O2Q__All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>TCC_O2Q__Source_Field_API__c</columns>
    <columns>TCC_O2Q__Destination_Field_API__c</columns>
    <columns>TCC_O2Q__Sync__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>